--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -28,27 +28,31 @@ NOTE: This file contains the styling for responsive Template.
   }
 }
 @media (min-width: 1300px) {
-  body.sidebar-main .iq-sidebar {
+  body.sidebar-main .iq-sidebar  {
     width: 80px;
   }
+
   .logo-title {
     white-space: nowrap;
   }
   body.sidebar-main .iq-menu-bt {
     opacity: 0;
   }
-  body.sidebar-main .iq-sidebar:hover,
-  body.sidebar-main .iq-sidebar:hover .iq-sidebar-logo {
-    width: 300px;
+ 
+  body.sidebar-main .iq-sidebar .iq-sidebar-menu .iq-menu li  span
+  {
+    opacity: 0;
+    /* width: 300px; */
   }
   body.sidebar-main .iq-sidebar:hover .iq-sidebar-menu .iq-menu li a span,
   body.sidebar-main .iq-sidebar:hover .iq-sidebar-logo a span,
   body.sidebar-main .iq-sidebar:hover .iq-sidebar-logo a span p,
   body.sidebar-main .iq-sidebar:hover .iq-sidebar-menu .iq-menu li a .badge,
   body.sidebar-main .iq-sidebar:hover .iq-menu-bt {
-    opacity: 1;
+    opacity: 0;
     transition: all 0.3s ease 0s;
   }
+
   body.sidebar-main #sidebar-bottom {
     opacity: 0;
     transition: all 0.3s ease 0s;
@@ -57,6 +61,7 @@ NOTE: This file contains the styling for responsive Template.
   }
   body.sidebar-main .iq-sidebar:hover #sidebar-bottom {
     opacity: 1;
+    width: 80px;
     transition: all 0.3s ease 0s;
     -webkit-transition: all 0.3s ease 0s;
     -moz-transition: all 0.3s ease 0s;
