--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1145,17 +1145,17 @@ body.sidebar-main .iq-sidebar .iq-menu li a[aria-expanded="false"].collapsed {
   border-radius: 0;
 }
 
-.iq-sidebar-menu .iq-menu li.active-menu>a>svg>path {
+/* .iq-sidebar-menu .iq-menu li.active-menu>a>svg>path {
   fill: var(--iq-primary) !important;
-}
+} */
 
-.iq-sidebar-menu .iq-menu li a:hover>svg>path {
+/* .iq-sidebar-menu .iq-menu li a:hover>svg>path {
   fill: var(--iq-primary) !important;
-}
+} */
 
-.iq-sidebar-menu .iq-menu>li.active>a>svg>path {
+/* .iq-sidebar-menu .iq-menu>li.active>a>svg>path {
   fill: var(--iq-primary) !important;
-}
+} */
 
 .iq-sidebar-menu .iq-menu li.active .iq-submenu li.active>a>svg>path {
   fill: var(--iq-primary) !important;
