--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5948,7 +5948,12 @@ color: #f8f9fa !important;
                   width: 280% !important;
                 }
                 }   
-                
+                @media screen and (min-width: 1700px) and (max-width: 2000px){
+
+.TEXTINPUT{
+  width: 310% !important;
+}
+                }
                 
     @media (max-width: 480px) {
     body.sidebar-main .iq-sidebar {
