--- a/src/assets/css/swiper.css
+++ b/src/assets/css/swiper.css
@@ -122,3 +122,9 @@
 }
 }
 
+@media screen and (min-width: 0px) and (max-width: 700px){
+
+    .Swiperresp{
+        margin-top: 5% !important;
+    }
+}
