--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1287,6 +1287,9 @@ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
     .Responsivrbtn{
       padding: 23px 30px !important; 
     }
+    .Flexcenter{
+      justify-content: center;
+    }
 	}
 
   @media screen and (min-width: 1020px) and (max-width: 1030px){
